--- a/src/main/resources/templates/LoginPage.html
+++ b/src/main/resources/templates/LoginPage.html
@@ -1,50 +1,55 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="ISO-8859-1">
+  <meta charset="ISO-8859-1">
 
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
 
-<title>Login Page</title>
+  <title>Login Page</title>
 </head>
+
 <body>
 
 
 
-<section class="vh-100" style="background-color: #508bfc;">
-  <div id="myDIV" class="container py-5 h-100">
-    <div class="row d-flex justify-content-center align-items-center h-100">
-      <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-      
-      
-        <div id="patDIV" class="card shadow-2-strong" style="border-radius: 1rem; display: block;" >
-          <div class="card-body p-5 text-center">
-          <form name="patForm" action="javascript:void(0)" onsubmit="patLogin()">
-          	
+  <section class="vh-100" style="background-color: #508bfc;">
+    <div id="myDIV" class="container py-5 h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-12 col-md-8 col-lg-6 col-xl-5">
 
-            <h3 >Patient's Sign in Page</h3>
-            <h6 class="mb-5">Please Enter your Email and Password to Login</h6>
 
-            <div class="form-outline mb-2">
-            	<label class="form-label" for="typeEmailX-1" >Email</label>
-              	<input type="email" id="typeEmailX-1" class="form-control form-control-rg" placeholder="Email" required="required"/>
-              	<div id="validationServer01Feedback" class="invalid-feedback">
-			      Please provide a valid email.
-			    </div>
-              
-            </div>
+          <div id="patDIV" class="card shadow-2-strong" style="border-radius: 1rem; display: block;">
+            <div class="card-body p-5 text-center">
+              <form name="patForm" action="javascript:void(0)" onsubmit="patLogin()">
 
-            <div class="form-outline mb-4">
-            	<label class="form-label" for="typePasswordX-1" >Password</label>
-              	<input type="password" id="typePasswordX-1" class="form-control form-control-rg" placeholder="Password" required="required"/>
-	              	<div id="validationServer02Feedback" class="invalid-feedback">
-				      Please provide a valid password.
-				    </div>
-            </div>
 
-            <!-- Checkbox 
+                <h3>Patient's Sign in Page</h3>
+                <h6 class="mb-5">Please Enter your Email and Password to Login</h6>
+
+                <div class="form-outline mb-2">
+                  <label class="form-label" for="typeEmailX-1">Email</label>
+                  <input type="email" id="typeEmailX-1" class="form-control form-control-rg" placeholder="Email"
+                    required="required" />
+                  <div id="validationServer01Feedback" class="invalid-feedback">
+                    Please provide a valid email.
+                  </div>
+
+                </div>
+
+                <div class="form-outline mb-4">
+                  <label class="form-label" for="typePasswordX-1">Password</label>
+                  <input type="password" id="typePasswordX-1" class="form-control form-control-rg"
+                    placeholder="Password" required="required" />
+                  <div id="validationServer02Feedback" class="invalid-feedback">
+                    Please provide a valid password.
+                  </div>
+                </div>
+
+                <!-- Checkbox 
             
             <div class="form-check d-flex justify-content-start mb-4">
               <input
@@ -57,46 +62,50 @@
             </div>
             -->
 
-            <button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
-			<!-- 
+                <button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
+                <!-- 
             <hr class="my-4">
 			
             <button class="btn btn-lg btn-block btn-primary" style="background-color: #dd4b39;" type="submit"><i class="fab fa-google me-2"></i> Sign in with google</button>
             <button class="btn btn-lg btn-block btn-primary mb-2" style="background-color: #3b5998;" type="submit"><i class="fab fa-facebook-f me-2"></i>Sign in with facebook</button>
 			 -->
-			 <hr class="my-4">
-			 <button type="button" class="btn btn-outline-primary" onclick="docDisFunction()">Sign in as Doctor</button>
-			 <button type="button" class="btn btn-outline-dark" onclick="resDisFunction()">Sign in as Receptionist</button>
-			 </form>
+                <hr class="my-4">
+                <button type="button" class="btn btn-outline-primary" onclick="docDisFunction()">Sign in as
+                  Doctor</button>
+                <button type="button" class="btn btn-outline-dark" onclick="resDisFunction()">Sign in as
+                  Receptionist</button>
+              </form>
+            </div>
           </div>
-        </div>
-        
-        <div id="docDIV" class="card shadow-2-strong" style="border-radius: 1rem; display: none;">
-          <div class="card-body p-5 text-center">
-          	<form name="docForm" action="javascript:void(0)" onsubmit="docLogin()">
 
-            <h3 >Doctor's Sign in Page</h3>
-            <h6 class="mb-5">Please Enter your Email and Password to Login</h6>
+          <div id="docDIV" class="card shadow-2-strong" style="border-radius: 1rem; display: none;">
+            <div class="card-body p-5 text-center">
+              <form name="docForm" action="javascript:void(0)" onsubmit="docLogin()">
 
-            <div class="form-outline mb-2">
-            	<label class="form-label" for="typeEmailX-2" >Email</label>
-              	<input type="email" id="typeEmailX-2" class="form-control form-control-rg" placeholder="Email" required="required"/>
-              	<div id="validationServer03Feedback" class="invalid-feedback">
-			      Please provide a valid email.
-			    </div>
-              
-            </div>
+                <h3>Doctor's Sign in Page</h3>
+                <h6 class="mb-5">Please Enter your Email and Password to Login</h6>
 
-            <div class="form-outline mb-4">
-            	<label class="form-label" for="typePasswordX-2" >Password</label>
-              	<input type="password" id="typePasswordX-2" class="form-control form-control-rg" placeholder="Password" required="required"/>
-              	<div id="validationServer04Feedback" class="invalid-feedback">
-			      Please provide a valid password.
-			    </div>
-              
-            </div>
+                <div class="form-outline mb-2">
+                  <label class="form-label" for="typeEmailX-2">Email</label>
+                  <input type="email" id="typeEmailX-2" class="form-control form-control-rg" placeholder="Email"
+                    required="required" />
+                  <div id="validationServer03Feedback" class="invalid-feedback">
+                    Please provide a valid email.
+                  </div>
 
-            <!-- Checkbox 
+                </div>
+
+                <div class="form-outline mb-4">
+                  <label class="form-label" for="typePasswordX-2">Password</label>
+                  <input type="password" id="typePasswordX-2" class="form-control form-control-rg"
+                    placeholder="Password" required="required" />
+                  <div id="validationServer04Feedback" class="invalid-feedback">
+                    Please provide a valid password.
+                  </div>
+
+                </div>
+
+                <!-- Checkbox 
             <div class="form-check d-flex justify-content-start mb-4">
               <input
                 class="form-check-input"
@@ -108,48 +117,52 @@
             </div>
             -->
 
-            <button class="btn btn-secondary btn-lg btn-block" type="submit">Login</button>
-			<!-- 
+                <button class="btn btn-secondary btn-lg btn-block" type="submit">Login</button>
+                <!-- 
             <hr class="my-4">
 			
             <button class="btn btn-lg btn-block btn-primary" style="background-color: #dd4b39;" type="submit"><i class="fab fa-google me-2"></i> Sign in with google</button>
             <button class="btn btn-lg btn-block btn-primary mb-2" style="background-color: #3b5998;" type="submit"><i class="fab fa-facebook-f me-2"></i>Sign in with facebook</button>
 			 -->
-			 <hr class="my-4">
-			 <button type="button" class="btn btn-outline-secondary" onclick="patDisFunction()">Sign in as Patient</button>
-			 <button type="button" class="btn btn-outline-dark" onclick="resDisFunction()">Sign in as Receptionist</button>
-          	</form>
+                <hr class="my-4">
+                <button type="button" class="btn btn-outline-secondary" onclick="patDisFunction()">Sign in as
+                  Patient</button>
+                <button type="button" class="btn btn-outline-dark" onclick="resDisFunction()">Sign in as
+                  Receptionist</button>
+              </form>
+            </div>
           </div>
-        </div>
-        
-        
-        
-        <div id="resDIV" class="card shadow-2-strong" style="border-radius: 1rem; display: none;">
-          <div class="card-body p-5 text-center">
-          	<form name="resForm" action="javascript:void(0)" onsubmit="resLogin()">
 
-            <h3 >Receptionist's Sign in Page</h3>
-            <h6 class="mb-5">Please Enter your Email and Password Login</h6>
 
-            <div class="form-outline mb-2">
-            	<label class="form-label" for="typeEmailX-3" >Email</label>
-              	<input type="email" id="typeEmailX-3" class="form-control form-control-rg" placeholder="Email" required="required"/>
-              	<div id="validationServer03Feedback" class="invalid-feedback">
-			      Please provide a valid email.
-			    </div>
-              
-            </div>
 
-            <div class="form-outline mb-4">
-            	<label class="form-label" for="typePasswordX-3" >Password</label>
-              	<input type="password" id="typePasswordX-3" class="form-control form-control-rg" placeholder="Password" required="required"/>
-              	<div id="validationServer04Feedback" class="invalid-feedback">
-			      Please provide a valid password.
-			    </div>
-              
-            </div>
+          <div id="resDIV" class="card shadow-2-strong" style="border-radius: 1rem; display: none;">
+            <div class="card-body p-5 text-center">
+              <form name="resForm" action="javascript:void(0)" onsubmit="resLogin()">
 
-            <!-- Checkbox 
+                <h3>Receptionist's Sign in Page</h3>
+                <h6 class="mb-5">Please Enter your Email and Password Login</h6>
+
+                <div class="form-outline mb-2">
+                  <label class="form-label" for="typeEmailX-3">Email</label>
+                  <input type="email" id="typeEmailX-3" class="form-control form-control-rg" placeholder="Email"
+                    required="required" />
+                  <div id="validationServer03Feedback" class="invalid-feedback">
+                    Please provide a valid email.
+                  </div>
+
+                </div>
+
+                <div class="form-outline mb-4">
+                  <label class="form-label" for="typePasswordX-3">Password</label>
+                  <input type="password" id="typePasswordX-3" class="form-control form-control-rg"
+                    placeholder="Password" required="required" />
+                  <div id="validationServer04Feedback" class="invalid-feedback">
+                    Please provide a valid password.
+                  </div>
+
+                </div>
+
+                <!-- Checkbox 
             <div class="form-check d-flex justify-content-start mb-4">
               <input
                 class="form-check-input"
@@ -161,33 +174,55 @@
             </div>
             -->
 
-            <button class="btn btn-dark btn-lg btn-block" type="submit">Login</button>
-			<!-- 
+                <button class="btn btn-dark btn-lg btn-block" type="submit">Login</button>
+                <!-- 
             <hr class="my-4">
 			
             <button class="btn btn-lg btn-block btn-primary" style="background-color: #dd4b39;" type="submit"><i class="fab fa-google me-2"></i> Sign in with google</button>
             <button class="btn btn-lg btn-block btn-primary mb-2" style="background-color: #3b5998;" type="submit"><i class="fab fa-facebook-f me-2"></i>Sign in with facebook</button>
 			 -->
-			 <hr class="my-4">
-			 <button type="button" class="btn btn-outline-secondary" onclick="patDisFunction()">Sign in as Patient</button>
-			 <button type="button" class="btn btn-outline-primary" onclick="docDisFunction()">Sign in as Doctor</button>
-          	</form>
+                <hr class="my-4">
+                <button type="button" class="btn btn-outline-secondary" onclick="patDisFunction()">Sign in as
+                  Patient</button>
+                <button type="button" class="btn btn-outline-primary" onclick="docDisFunction()">Sign in as
+                  Doctor</button>
+              </form>
+            </div>
           </div>
+
         </div>
-        
       </div>
     </div>
+  </section>
+
+  <div style="position: absolute; top: 20px; right: 20px;" id="myToast" data-bs-delay="10000"
+    class="toast align-items-center text-white bg-danger border-0" role="alert" aria-live="assertive"
+    aria-atomic="true">
+    <div class="d-flex">
+      <div id="toast-body-message" class="toast-body">
+        Hello, world! This is a toast message.
+      </div>
+      <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"
+        aria-label="Close"></button>
+    </div>
   </div>
-</section>
 
-	<script type="text/javascript" src="../static/mainjs.js"
-		th:src="@{/mainjs.js}">
-		
-	</script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+    integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+    integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+    crossorigin="anonymous"></script>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="../static/mainjs.js" th:src="@{/mainjs.js}">
+
+  </script>
 
 </body>
+
 </html>
