--- a/src/main/resources/templates/doctorAppointmentList.html
+++ b/src/main/resources/templates/doctorAppointmentList.html
@@ -39,17 +39,17 @@
 				APP</span>
 		</div>
 		<ul class="nav-links">
-			<li><a  th:href="@{/doctor}" > <i class='bx bx-grid-alt'></i>
+			<li><a th:href="@{/doctor}"> <i class='bx bx-grid-alt'></i>
 					<span class="links_name">Dashboard</span>
 			</a></li>
-			<li><a class="active" th:href="@{/doctor/doctorAppointmentList}"> <i class='bx bx-box'></i>Appointment
-					List <span class="links_name"></span>
+			<li><a class="active" th:href="@{/doctor/doctorAppointmentList}">
+					<i class='bx bx-box'></i>Appointment List <span class="links_name"></span>
 			</a></li>
-			<li><a th:href="@{/doctor/doctorPatientList}"> <i class='bx bx-box'></i>Patient
-					List <span class="links_name"></span>
+			<li><a th:href="@{/doctor/doctorPatientList}"> <i
+					class='bx bx-box'></i>Patient List <span class="links_name"></span>
 			</a></li>
-			<li><a th:href="@{/doctor/doctorProfile}"> <i class='bx bx-box'></i>Profile
-					<span class="links_name"></span>
+			<li><a th:href="@{/doctor/doctorProfile}"> <i
+					class='bx bx-box'></i>Profile <span class="links_name"></span>
 			</a></li>
 			<li class="log_out"><a href="#"> <i class='bx bx-log-out'></i>
 					<span class="links_name">Log out</span>
@@ -101,66 +101,38 @@
 				<div class="recent-sales box">
 					<div class="title">Recent Appointments</div>
 					<div class="sales-details"></div>
-					 <div class="sales-details">
-            <ul class="details">
-              <li class="topic">Name</li>
-              <li><a href="#">Mrs.Anshika</li>
-              <li><a href="#">Mrs.Riya</a></li>
-              <li><a href="#">Mr.Akash</a></li>
-              <li><a href="#">Mr.Jay</a></li>
-            </ul>
-            <ul class="details">
-              <li class="topic">Age/Gender</li>
-              <li><a href="#">24/F</a></li>
-              <li><a href="#">19/F</a></li>
-              <li><a href="#">24/M</a></li>
-              <li><a href="#">22/M</a></li>
-            </ul>
-            <ul class="details">
-              <li class="topic">Appointment status</li>
-              <li><a href="#">Scheduled</a></li>
-              <li><a href="#">Pending</a></li>
-              <li><a href="#">Pending</a></li>
-              <li><a href="#">Scheduled</a></li>
-            </ul>
-            <ul class="details">
-              <li class="topic">Scheduled date</li>
-              <li><a href="#">24/03/22</a></li>
-              <li><a href="#">Pending</a></li>
-              <li><a href="#">Pending</a></li>
-              <li><a href="#">24/03/22</a></li>
-            </ul>
-           
-          </div>
-					 
-				</div>
-				<!-- <div class="top-sales box"> -->
-				<!-- 
-				<div class="title">Patient List</div>
-					<ul class="top-sales-details">
-						<li><span class="product">Gulati</span> </a> <span
-							class="price"></span></li>
-						<li><a href="#"> <span class="product">Nidhi</span>
-						</a> <span class="price"></span></li>
-					</ul>
-				</div> -->
+					<div class="sales-details">
+						<ul class="details">
+							<li class="topic">Name</li>
+							<li><a href="#">Mrs.Anshika</li>
+							<li><a href="#">Mrs.Riya</a></li>
+							<li><a href="#">Mr.Akash</a></li>
+							<li><a href="#">Mr.Jay</a></li>
+						</ul>
+						<ul class="details">
+							<li class="topic">Age/Gender</li>
+							<li><a href="#">24/F</a></li>
+							<li><a href="#">19/F</a></li>
+							<li><a href="#">24/M</a></li>
+							<li><a href="#">22/M</a></li>
+						</ul>
+						<ul class="details">
+							<li class="topic">Appointment status</li>
+							<li><a href="#">Scheduled</a></li>
+							<li><a href="#">Pending</a></li>
+							<li><a href="#">Pending</a></li>
+							<li><a href="#">Scheduled</a></li>
+						</ul>
+						<ul class="details">
+							<li class="topic">Scheduled date</li>
+							<li><a href="#">24/03/22</a></li>
+							<li><a href="#">Pending</a></li>
+							<li><a href="#">Pending</a></li>
+							<li><a href="#">24/03/22</a></li>
+						</ul>
 
-					<!-- <div class="title">Top Doctors</div>
-					<ul class="top-sales-details">
-						<li><span class="product">Dr Gulati</span> </a> <span
-							class="price"><div class="form-check form-switch">
-									<input class="form-check-input" type="checkbox" role="switch"
-										id="flexSwitchCheckChecked" checked> <label
-										class="form-check-label" for="flexSwitchCheckChecked"></label>
-								</div></span></li>
-						<li><a href="#"> <span class="product">Dr Nidhi</span>
-						</a> <span class="price"><div class="form-check form-switch">
-									<input class="form-check-input" type="checkbox" role="switch"
-										id="flexSwitchCheckChecked" checked> <label
-										class="form-check-label" for="flexSwitchCheckChecked"></label>
-								</div></span></li>
-					</ul>
-				</div> -->
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
