--- a/src/main/resources/templates/doctorProfile.html
+++ b/src/main/resources/templates/doctorProfile.html
@@ -39,17 +39,17 @@
 				APP</span>
 		</div>
 		<ul class="nav-links">
-			<li><a  th:href="@{/doctor}" > <i class='bx bx-grid-alt'></i>
+			<li><a th:href="@{/doctor}"> <i class='bx bx-grid-alt'></i>
 					<span class="links_name">Dashboard</span>
 			</a></li>
-			<li><a th:href="@{/doctor/doctorAppointmentList}"> <i class='bx bx-box'></i>Appointment
-					List <span class="links_name"></span>
+			<li><a th:href="@{/doctor/doctorAppointmentList}"> <i
+					class='bx bx-box'></i>Appointment List <span class="links_name"></span>
 			</a></li>
-			<li><a th:href="@{/doctor/doctorPatientList}"> <i class='bx bx-box'></i>Patient
-					List <span class="links_name"></span>
+			<li><a th:href="@{/doctor/doctorPatientList}"> <i
+					class='bx bx-box'></i>Patient List <span class="links_name"></span>
 			</a></li>
-			<li><a class="active" th:href="@{/doctor/doctorProfile}"> <i class='bx bx-box'></i>Profile
-					<span class="links_name"></span>
+			<li><a class="active" th:href="@{/doctor/doctorProfile}"> <i
+					class='bx bx-box'></i>Profile <span class="links_name"></span>
 			</a></li>
 			<li class="log_out"><a href="#"> <i class='bx bx-log-out'></i>
 					<span class="links_name">Log out</span>
@@ -96,42 +96,33 @@
 
 				</div>
 			</div>
-			
+
 			<div class="sales-boxes">
 				<div class="recent-sales box">
 					<div class="title">About</div>
 					<div class="sales-details">
-					<ul class="top-sales-details">
-					<p>
-				    <br> Name: Dr. Gulati</br>
-					<br> Email:Drgulati@gmail.com</br>
-					<br> Specialization: Physician</br>
-					<br> DOB: 12/09/1992</br>
-					<br> Gender: Male</br>
-					<br> Fees: 750/-</br>
-					<br> Experiance: 12 years</br>
-					</p>
-						
-				
-						
-					</ul>
+						<ul class="top-sales-details">
+							<p>
+								<br> Name: Dr. Gulati</br> <br> Email:Drgulati@gmail.com</br> <br>
+								Specialization: Physician</br> <br> DOB: 12/09/1992</br> <br>
+								Gender: Male</br> <br> Fees: 750/-</br> <br> Experiance: 12
+								years</br>
+							</p>
+
+
+
+						</ul>
 					</div>
 
-					
+
 				</div>
 
-			
+
 			</div>
 
-			<!-- <div class="sales-boxes">
-				<div class="recent-sales box">
-				<div class="title">About</div>
-					
-				</div/>-->
 
-
-			</div> 
 		</div>
+
 	</section>
 	<script type="text/javascript" src="../static/mainjs.js"
 		th:src="@{/mainjs.js}">
