--- a/src/main/resources/templates/doctorDashboard.html
+++ b/src/main/resources/templates/doctorDashboard.html
@@ -50,7 +50,7 @@
 			</a></li>
 			<li><a th:href="@{/doctor/doctorProfile}"> <i
 					class='bx bx-box'></i>Profile <span class="links_name"></span>
-      </a></li>
+			</a></li>
 			<li class="log_out"><a href="#"> <i class='bx bx-log-out'></i>
 					<span class="links_name">Log out</span>
 			</a></li>
@@ -91,22 +91,25 @@
 				</div>
 
 
-				<div class="top-sales box">
-
-
-					<div class="title">Today's Appointment</div>
-					<ul class="details">
-						<li class="topic"></li>
-						<li><a href="#">Mrs.Anshika</a></li>
-						<li><a href="#">Mrs.Piya</a></li>
-						<li><a href="#">Mr.Akash</a></li>
-						<li><a href="#">Mr.Jay</a></li>
-					</ul>
-
-				</div>
 
 			</div>
-		</div>
+
+		
+		<div class="sales-boxes">
+				<div class="recent-sales box">
+					<div class="title">Patient List</div>
+					<div class="sales-details">
+						<ul class="details">
+							<li class="topic">Name</li>
+							<li><a href="#">Mrs.Verma</a></li>
+							<li><a href="#">Mr.Gupta</a></li>
+							<li><a href="#">Mr.Rawat</a></li>
+							<li><a href="#">Mrs.Shukla</a></li>
+							<li><a href="#">Mr.Singh</a></li>
+						</ul>
+				</div>
+				</div>
+				</div>
 	</section>
 	<script type="text/javascript" src="../static/mainjs.js"
 		th:src="@{/mainjs.js}">
