--- a/src/main/resources/templates/doctorProfile.html
+++ b/src/main/resources/templates/doctorProfile.html
@@ -2,34 +2,26 @@
 <html lang="en" dir="ltr">
 
 <head>
-<meta charset="UTF-8">
-<title>Doctor Home</title>
+	<meta charset="UTF-8">
+	<title>Doctor Home</title>
 
-<link rel="stylesheet" href="../static/style.css"
-	th:href="@{/style.css}">
-<link rel="stylesheet" href="../static/style2.css"
-	th:href="@{/style2.css}">
+	<link rel="stylesheet" href="../static/style.css" th:href="@{/style.css}">
+	<link rel="stylesheet" href="../static/style2.css" th:href="@{/style2.css}">
 
-<link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css'
-	rel='stylesheet'>
-<link
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-	rel="stylesheet"
-	integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-	crossorigin="anonymous">
+	<link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-<script src="https://kit.fontawesome.com/c92909f8b0.js"
-	crossorigin="anonymous"></script>
-<script src="https://kit.fontawesome.com/b496fc4e58.js"
-	crossorigin="anonymous"></script>
+	<script src="https://kit.fontawesome.com/c92909f8b0.js" crossorigin="anonymous"></script>
+	<script src="https://kit.fontawesome.com/b496fc4e58.js" crossorigin="anonymous"></script>
 
-<style>
-.home-content .overview-boxes {
-	justify-content: flex-start;
-	gap: 24px;
-}
-</style>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<style>
+		.home-content .overview-boxes {
+			justify-content: flex-start;
+			gap: 24px;
+		}
+	</style>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -41,20 +33,20 @@
 		<ul class="nav-links">
 			<li><a th:href="@{/doctor}"> <i class='bx bx-grid-alt'></i>
 					<span class="links_name">Dashboard</span>
-			</a></li>
-			<li><a th:href="@{/doctor/doctorAppointmentList}"> <i
-					class='bx bx-box'></i>Appointment List <span class="links_name"></span>
-			</a></li>
-			<li><a th:href="@{/doctor/doctorPatientList}"> <i
-					class='bx bx-box'></i>Patient List <span class="links_name"></span>
-			</a></li>
-			<li><a class="active" th:href="@{/doctor/doctorProfile}"> <i
-					class='bx bx-box'></i>Profile <span class="links_name"></span>
-			</a></li>
+				</a></li>
+			<li><a th:href="@{/doctor/doctorAppointmentList}"> <i class='bx bx-box'></i>Appointment List <span
+						class="links_name"></span>
+				</a></li>
+			<li><a th:href="@{/doctor/doctorPatientList}"> <i class='bx bx-box'></i>Patient List <span
+						class="links_name"></span>
+				</a></li>
+			<li><a class="active" th:href="@{/doctor/doctorProfile}"> <i class='bx bx-box'></i>Profile <span
+						class="links_name"></span>
+				</a></li>
 			<li class="log_out"><button
 					style="outline: none; border: none; background: transparent; color: white; margin-left: 25px; padding-right: 4px;"
-					class="links_name" onclick="logout()">Log out</button> <i
-				style="min-width: 33px;" class='bx bx-log-out'></i></li>
+					class="links_name" onclick="logout()">Log out</button> <i style="min-width: 33px;"
+					class='bx bx-log-out'></i></li>
 		</ul>
 	</div>
 	<section class="home-section">
@@ -64,8 +56,7 @@
 			</div>
 
 			<div class="profile-details">
-				<img src="static/images/profile.jpg" alt=""> <span
-					class="admin_name">Dr Gulati</span> <i></i>
+				<img src="static/images/profile.jpg" alt=""> <span class="admin_name"></span> <i></i>
 			</div>
 		</nav>
 
@@ -74,7 +65,7 @@
 				<div class="box">
 					<div class="right-side">
 						<div class="box-topic">Name</div>
-						<div class="number">Dr.Gulati</div>
+						<div id="docName" class="number"></div>
 
 
 					</div>
@@ -83,7 +74,7 @@
 				<div class="box">
 					<div class="right-side">
 						<div class="box-topic">Experiance</div>
-						<div class="number">12 years</div>
+						<div id="docExp" class="number"></div>
 
 					</div>
 
@@ -91,7 +82,7 @@
 				<div class="box">
 					<div class="right-side">
 						<div class="box-topic">Speciality</div>
-						<div class="number">Physician</div>
+						<div id="docSpec" class="number"></div>
 
 					</div>
 
@@ -103,11 +94,11 @@
 					<div class="title">About</div>
 					<div class="sales-details">
 						<ul class="top-sales-details">
+							<p id="docAbout"></p>
 							<p>
-								<br> Name: Dr. Gulati</br> <br> Email:Drgulati@gmail.com</br> <br>
-								Specialization: Physician</br> <br> DOB: 12/09/1992</br> <br>
-								Gender: Male</br> <br> Fees: 750/-</br> <br> Experiance: 12
-								years</br>
+								<br> Email: <span id="docEmail">Drgulati@gmail.com</span></br> <br> DOB:
+								<span id="docDob">12/09/1992</span></br> <br> Gender: <span id="docGender"></span></br>
+								<br> Fees: <span id="docFee">750</span></br>
 							</p>
 
 
@@ -126,16 +117,27 @@
 
 	</section>
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"
-		integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-		crossorigin="anonymous"></script>
-	<script type="text/javascript" src="../static/mainjs.js"
-		th:src="@{/mainjs.js}">
-		
+		integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="../static/mainjs.js" th:src="@{/mainjs.js}">
+
 	</script>
 	<script>
+		document.addEventListener('DOMContentLoaded', function () {
+			const doctor = JSON.parse(localStorage.getItem('doctor'));
+			document.getElementById("docName").innerHTML = "Dr. " + doctor.name;
+			document.getElementById("docExp").innerHTML = doctor.experience + " Years";
+			document.getElementById("docSpec").innerHTML = doctor.specialization;
+			document.getElementById("docAbout").innerHTML = doctor.about;
+			document.getElementById("docEmail").innerHTML = doctor.email;
+			document.getElementById("docDob").innerHTML = doctor.dob;
+			document.getElementById("docGender").innerHTML = doctor.gender;
+			document.getElementById("docFee").innerHTML = "&#8377; " + doctor.fee;
+
+		});
+
 		let sidebar = document.querySelector(".sidebar");
 		let sidebarBtn = document.querySelector(".sidebarBtn");
-		sidebarBtn.onclick = function() {
+		sidebarBtn.onclick = function () {
 			sidebar.classList.toggle("active");
 			if (sidebar.classList.contains("active")) {
 				sidebarBtn.classList.replace("bx-menu", "bx-menu-alt-right");
@@ -143,17 +145,14 @@
 				sidebarBtn.classList.replace("bx-menu-alt-right", "bx-menu");
 		}
 	</script>
-	<script
-		src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
 		crossorigin="anonymous"></script>
 
-	<script
-		src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
 		integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
 		crossorigin="anonymous"></script>
-	<script
-		src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
 		integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
 		crossorigin="anonymous"></script>
 </body>
